--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
         コマンドパレットを開き、エディタの様々な機能を表示します。
       </ul>
       </p>
+      <h2> Simple C++ Editor のコード・保存する情報について </h2>
+      <p>
+        Simple C++ Editor のソースコードは<a href="https://github.com/TumoiYorozu/SimpleCppEditor"> GitHub のプロジェクトページ</a> に公開されています。
+        このエディタはデータを使用者のブラウザのみに保存し、コードの実行は<a href="https://wandbox.org/">Wandbox</a>に任せているため、コードの保存や実行に必要なサーバーは必要ありません。
+      </p>
     </div>
     <script type="text/javascript" src="wand_run.js"></script>
     <script type="text/javascript" src="golden_layout_settings.js"></script>
