--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <script type="text/javascript" src="lib/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="lib/goldenlayout-1.5.9.min.js"></script>
-    <script type="text/javascript" src="node_modules/monaco-editor/min/vs/loader.js"></script>
+    <!-- <script type="text/javascript" src="node_modules/monaco-editor/min/vs/loader.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.13/ace.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.13/ext-language_tools.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.13/theme-tomorrow.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.13/theme-monokai.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.13/theme-tomorrow.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.13/theme-monokai.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.13/mode-c_cpp.js"></script>
     <link type="text/css" rel="stylesheet" href="lib/goldenlayout-1.5.9-base.css" />
     <link type="text/css" rel="stylesheet" href="lib/goldenlayout-1.5.9-light-theme.css" />
