--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta name="description" content="C++ 入門者向けの、Web ブラウザだけでその場で実行できる C++ エディタ・実行サイトです。" />
+    <meta property="og:description" content="C++ 入門者向けの、Web ブラウザだけでその場で実行できる C++ エディタ・実行サイトです。" />
+    <meta property="og:title" content="C++ Play | Simple C++ Editor" />
     <script type="text/javascript" src="lib/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="lib/goldenlayout-1.5.9.min.js"></script>
     <script type="text/javascript" src="node_modules/monaco-editor/min/vs/loader.js"></script>
     <link type="text/css" rel="stylesheet" href="lib/goldenlayout-1.5.9-base.css" />
     <link type="text/css" rel="stylesheet" href="lib/goldenlayout-1.5.9-light-theme.css" />
     <link type="text/css" rel="stylesheet" href="style.css">
-    <title>Simple C++ Editor</title>
+    <title>C++ Play | Simple C++ Editor</title>
 </head>
 
 <body style="width: 100%; height: 100vh; margin: 0;">
     <div class="header" id="header" style="width:100%; height:30px">
-        <div class="title" style="width:calc(clamp(170px, 40%, 220px));height:100%; float: left; font-size: large;">
-            Simple C++ Editor
+        <div class="title" style="width:calc(clamp(170px, 40%, 250px));height:100%; float: left; font-size: large;">
+            C++ Play<small> | Simple C++ Editor</small>
         </div>
         <div class="dropdown_menu" style="width:calc(min(135px, 80% - 190px));height:100%; float: left">
             <ul class="nav" style="width:100%">
