--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="description" content="C++ 入門者向けの、Web ブラウザだけでその場で実行できる C++ エディタ・実行サイトです。" />
     <meta property="og:description" content="C++ 入門者向けの、Web ブラウザだけでその場で実行できる C++ エディタ・実行サイトです。" />
-    <meta property="og:title" content="C++ Play | Simple C++ Editor" />
+    <meta property="og:title" content="Simple C++ Editor | C++ Play" />
     <script type="text/javascript" src="lib/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="lib/goldenlayout-1.5.9.min.js"></script>
     <script type="text/javascript" src="node_modules/monaco-editor/min/vs/loader.js"></script>
     <link type="text/css" rel="stylesheet" href="lib/goldenlayout-1.5.9-base.css" />
     <link type="text/css" rel="stylesheet" href="lib/goldenlayout-1.5.9-light-theme.css" />
     <link type="text/css" rel="stylesheet" href="style.css">
-    <title>C++ Play | Simple C++ Editor</title>
+    <title>Simple C++ Editor | C++ Play</title>
 </head>
 
 <body style="width: 100%; height: 100vh; margin: 0;">
     <div class="header" id="header" style="width:100%; height:30px">
-        <div class="title" style="width:calc(clamp(170px, 40%, 250px));height:100%; float: left; font-size: large;">
-            C++ Play<small> | Simple C++ Editor</small>
+        <div class="title" style="width:calc(clamp(170px, 40%, 280px));height:100%; float: left; font-size: large;">
+            Simple C++ Editor | C++ Play
         </div>
         <div class="dropdown_menu" style="width:calc(min(135px, 80% - 190px));height:100%; float: left">
             <ul class="nav" style="width:100%">
